--- a/style.css
+++ b/style.css
@@ -3,43 +3,61 @@
     margin: 0;
 }
 
+html,
+body {
+    height: 100%;
+    width: 100%;
+}
+
 body{
-    background-image: url("https://media.giphy.com/media/xTiTnxpQ3ghPiB2Hp6/giphy.gif");
+    background-color: lightblue;
+}
+
+.container{
+    position: relative;
+    margin: auto;
+    top: 250px;
+    text-align: center;
 }
 
 #layout{
     border: 2px solid #d3d3d3;
-    width: 600px;
-    height: 300px;
+    width: 800px;
+    height: 400px;
     background-color: #f1f1f1;
+    display: inline-block;
+
 }
 
 #dog{
-    width: 20px;
-    height: 20px;
+    width: 50px;
+    height: 50px;
     position: relative;
-    top: 280px;
-    left: 20px;
+    top: 350px;
+    left: 50px;
+}
+
+#block{
+    width: 40px;
+    height: 40px;
+    background-color: red;
+    position: relative;
+    top: 310px;
+    left: 760px;
+    border-radius: 30px;
 }
 
 #score{
-    width: 600px;
+    width: 800px;
     height: 20px;
     position: absolute;
     text-align: center;
     font-size: 30px;
     font-family: Calibri;
+    display: inline-block;
 }
 
-#block{
-    width: 20px;
-    height: 20px;
-    background-color: red;
-    position: relative;
-    top: 260px;
-    left: 580px;
-    border-radius:20px ;
-}
+
 
 /*.big_block{*/
 /*    width: 30px;*/
