--- a/style.css
+++ b/style.css
@@ -74,6 +74,11 @@ div.path{
     display: inline-block;
 }
 
+.icons:hover {
+        -webkit-transform: scale(1.3);
+        -ms-transform: scale(1.3);
+        transform: scale(1.3);
+}
 
 /*Start Page*/
 #layout_game{
@@ -168,7 +173,7 @@ div.path{
     box-sizing: border-box;
 }
 
-.modal-container{
+.modal-container, .modal-containerIns{
     pointer-events: none;
     opacity: 0;
     display: flex; /*dont forget to change to flex*/
@@ -187,6 +192,11 @@ div.path{
     pointer-events: auto;
 }
 
+.modal-containerIns.modal-showIns {
+    opacity: 1;
+    pointer-events: auto;
+}
+
 .modal{
     background-color: white;
     padding: 30px 50px;
@@ -197,7 +207,6 @@ div.path{
     box-shadow: 2px 2px 60px rgba(0,0,2,4);
     align-items: center;
     position: fixed;
-
 }
 
 .overlay-modal {
